[gd_scene load_steps=14 format=3 uid="uid://dd5xaxkseexq6"]

[ext_resource type="Script" path="res://scenes/main/game_screen.gd" id="1_5i3jp"]
[ext_resource type="Texture2D" uid="uid://lwl0515ctifm" path="res://assets/Main Screen/background.png" id="1_tas65"]
[ext_resource type="Texture2D" uid="uid://v14no3pwy3ni" path="res://assets/Potion Screen/background.png" id="2_vas8p"]
[ext_resource type="Texture2D" uid="uid://b0xq6j44gensd" path="res://assets/Main Screen/loveinterest-mainsprite.png" id="3_4utwp"]
[ext_resource type="PackedScene" uid="uid://cikan6wrp4482" path="res://scenes/minigames/eye_contact.tscn" id="3_t0bxb"]
[ext_resource type="SpriteFrames" uid="uid://dmfct4ltbm0vi" path="res://assets/animations/potion_stages.tres" id="4_1rq4k"]
[ext_resource type="SpriteFrames" uid="uid://dybs228lbkxxm" path="res://assets/animations/health_frame.tres" id="7_nmean"]
[ext_resource type="PackedScene" uid="uid://cf6gplqeesi1j" path="res://scenes/main/match_3.tscn" id="8_bpi5a"]
[ext_resource type="Texture2D" uid="uid://khgwy1errba7" path="res://assets/Potion Screen/heat-bg.png" id="9_hoekc"]
[ext_resource type="AudioStream" uid="uid://dbj8mxbk3eifx" path="res://resources/match3_tile_sounds.tres" id="9_lqvou"]
[ext_resource type="Texture2D" uid="uid://c7mul7ibntgt8" path="res://assets/Potion Screen/potionframe.png" id="9_xuuga"]
[ext_resource type="Texture2D" uid="uid://d2r8al1kou10j" path="res://assets/Potion Screen/potion-fg.png" id="10_euitf"]
[ext_resource type="SpriteFrames" uid="uid://dk6d2efdcbx4v" path="res://assets/animations/fire_stages.tres" id="11_40bjc"]

[node name="GameScreen" type="Node2D"]
script = ExtResource("1_5i3jp")

[node name="MainClickArea" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 244.0
offset_bottom = 226.0

[node name="main_background" type="TextureRect" parent="MainClickArea"]
texture_filter = 1
texture_repeat = 1
layout_mode = 0
offset_right = 244.0
offset_bottom = 225.0
texture = ExtResource("1_tas65")
expand_mode = 1
stretch_mode = 2

[node name="love_interest" type="TextureRect" parent="MainClickArea"]
texture_filter = 1
texture_repeat = 1
layout_mode = 0
offset_left = 56.0
offset_top = 31.0
offset_right = 196.0
offset_bottom = 221.0
texture = ExtResource("3_4utwp")
stretch_mode = 2

[node name="Avatar" type="AnimatedSprite2D" parent="MainClickArea"]
unique_name_in_owner = true
texture_filter = 1
texture_repeat = 1
position = Vector2(34, 186)
sprite_frames = ExtResource("7_nmean")
frame = 3

[node name="potion_background" type="TextureRect" parent="."]
texture_filter = 1
texture_repeat = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 243.0
offset_right = 419.0
offset_bottom = 234.0
grow_horizontal = 0
texture = ExtResource("2_vas8p")
stretch_mode = 2

[node name="CurrentMinigame" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(121, 68)

[node name="EyeContact" parent="CurrentMinigame" instance=ExtResource("3_t0bxb")]

[node name="PotionClickArea" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_left = 244.0
offset_right = 400.0
offset_bottom = 226.0

[node name="Match3" parent="PotionClickArea" instance=ExtResource("8_bpi5a")]
layout_mode = 1
offset_left = 14.0
offset_top = 124.0
offset_right = 14.0
offset_bottom = 124.0
grid_width = 6
grid_height = 4
spacing = 21

[node name="Match3SlideSFX" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("9_lqvou")
volume_db = 10.306
max_polyphony = 3

[node name="HeatBar" type="TextureProgressBar" parent="."]
unique_name_in_owner = true
texture_filter = 1
texture_repeat = 1
offset_left = 278.0
offset_top = 57.0
offset_right = 318.0
offset_bottom = 108.0
step = 0.1
fill_mode = 3
texture_under = ExtResource("9_hoekc")
texture_progress = ExtResource("10_euitf")

[node name="PotionLiquid" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
z_index = 1
texture_filter = 1
texture_repeat = 1
position = Vector2(305, 94)
sprite_frames = ExtResource("4_1rq4k")

[node name="potion_frame" type="TextureRect" parent="."]
texture_filter = 1
texture_repeat = 1
offset_left = 281.0
offset_top = 63.0
offset_right = 339.0
offset_bottom = 122.0
texture = ExtResource("9_xuuga")

[node name="Fire" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
texture_repeat = 1
position = Vector2(306, 112)
sprite_frames = ExtResource("11_40bjc")

[connection signal="gui_input" from="MainClickArea" to="." method="_on_main_click_area_gui_input"]
[connection signal="gui_input" from="MainClickArea/main_background" to="." method="_on_main_background_gui_input"]
[connection signal="gui_input" from="PotionClickArea/Match3" to="PotionClickArea/Match3" method="_on_gui_input"]
